feat: setup api routes with out logic
